--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -2,10 +2,51 @@
   box-sizing: border-box;
 }
 
+::-webkit-scrollbar {
+  width: 7px;
+  background-color: #00000000;
+  border-radius: 5px;
+}
+ 
+::-webkit-scrollbar-thumb {
+  background-color: #ccc;
+  border-radius: 5px;
+}
+ 
+::-webkit-scrollbar-thumb:hover {
+  background-color: #bbb;
+}
+
 .right-border {
   border-right: 1px solid #ccc;
 }
 
 .padding-0 {
   padding: 0;
+}
+
+.text-ellipsis-1 {
+  word-break: break-all;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1; 
+}
+
+.text-ellipsis-2 {
+  word-break: break-all;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2; 
+}
+
+.flex {
+  display: flex;
+}
+
+.flex-jsb {
+  justify-content: space-between;
 }
