--- a/src/assets/scss/ant-mixin.scss
+++ b/src/assets/scss/ant-mixin.scss
@@ -10,3 +10,11 @@
   max-width: 0 !important;
   overflow: hidden;
 }
+
+.ant-collapse-header {
+  padding: 4px !important;
+}
+
+.ant-collapse-content-box {
+  padding: 5px 8px !important;
+}
