--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -56,3 +56,13 @@
   max-width: 140px;
   max-height: 140px;
 }
+
+// .v-enter-active,
+// .v-leave-active {
+//   transition: opacity 0.5s ease;
+// }
+
+// .v-enter-from,
+// .v-leave-to {
+//   opacity: 0;
+// }
