--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1,6 +1,6 @@
 * {
   box-sizing: border-box;
-  transition: all 0.5s;
+  transition: all 0.5s ease;
 }
 
 ::-webkit-scrollbar {
@@ -56,13 +56,3 @@
   max-width: 140px;
   max-height: 140px;
 }
-
-// .v-enter-active,
-// .v-leave-active {
-//   transition: opacity 0.5s ease;
-// }
-
-// .v-enter-from,
-// .v-leave-to {
-//   opacity: 0;
-// }
