--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -18,6 +18,10 @@
   background-color: #bbb;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  margin-bottom: 0;
+}
+
 .right-border {
   border-right: 1px solid #ccc;
 }
