--- a/src/assets/scss/ant-mixin.scss
+++ b/src/assets/scss/ant-mixin.scss
@@ -4,6 +4,10 @@
   visibility: hidden;
 }
 
+.ant-col {
+  transition: all 0.5s ease;
+}
+
 .ant-col-0 {
   display: block !important;
   flex: 0 0 0 !important;
